apps/teste666/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teste666-stable
  namespace: teste666
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste666.diegoluisi.eti.br
  labels:
    app: teste666
    backstage.io/kubernetes-id: teste666
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste666

---
apiVersion: v1
kind: Service
metadata:
  name: teste666-canary
  namespace: teste666
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste666.diegoluisi.eti.br
  labels:
    app: teste666
    backstage.io/kubernetes-id: teste666
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste666
