apps/teste666/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste666-vsvc
  namespace: teste666
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste666.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: teste666-stable
      weight: 100
    - destination:
        host: teste666-canary
      weight: 0
